--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "editorjs_dependencies",
   "version": "2.0.3",
   "description": "Provides dependencies libraries for 'editorjs' module.",
-  "license": "UNLICENSED",
+  "license": "MIT",
   "scripts": {
     "build": "node build.js"
   },
