--- a/composer.json
+++ b/composer.json
@@ -1,15 +1,24 @@
 {
-    "name": "batkor/editorjs_dependencies",
-    "type": "drupal-library",
-    "description": "Provides dependencies libraries for 'editorjs' module.",
-    "keywords": ["Drupal", "EditorJS", "dependencies"],
-    "homepage": "https://github.com/batkor/editorjs_dependencies",
-    "license": ["MIT"],
-    "authors": [
-        {
-            "name": "batkor",
-            "email": "info@batkor.ru",
-            "homepage": "https://batkor.ru/"
-        }
-    ]
+  "name": "drewble/editorjs_dependencies",
+  "type": "drupal-library",
+  "require": {
+    "composer/installers": "~1.0"
+  },
+  "description": "Provides updated dependencies libraries for 'editorjs' module. Forked from batkor/editorjs_dependencies",
+  "keywords": [
+    "Drupal",
+    "EditorJS",
+    "dependencies"
+  ],
+  "homepage": "https://github.com/drewble/editorjs_dependencies",
+  "license": [
+    "MIT"
+  ],
+  "authors": [
+    {
+      "name": "drewble",
+      "email": "drew@dmblake.com",
+      "homepage": "https://www.dmblake.com/"
+    }
+  ]
 }
